--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <!-- Research -->
             <section class="resume-section" id="research">
                 <div class="resume-section-content">
-                    <!-- <h2 class="mb-5">Research</h2>
+                    <h2 class="mb-5">Research</h2>
 
                     <h3 class="mb-0">The NeuroMorph Analysis and Visualization Toolkit</h3><br>
 
@@ -446,7 +446,7 @@
                         <div><a href="assets/files/Leaf_Classification_Poster.pdf">Leaf Classification from Local Boundary Analysis</a><br>
                         A. Jorstad, D. Jacobs.  Poster, Graduate Research Interaction Day, University of Maryland, College Park, 2008.</div>
                         </div>
-                    </div> -->
+                    </div>
 
 
                 </div>
