Improved the Research section

--- a/index.html
+++ b/index.html
@@ -267,9 +267,62 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Research</h2>
 
-                    <h3 class="mb-0">The NeuroMorph Analysis and Visualization Toolkit</h3><br>
+                    <br>
+                    <h3 class="mb-0">Stroke Rehabilitation Project</h3><br>
+
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/gender_bias_fig.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="">Predictors for returning to paid employment after transient ischemic attack and minor ischemic stroke </a><br>
+                        C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin.  European Stroke Journal, <i>submitted</i>.</div>
+                        </div>
+                    </div>
+
+                    <br>
+                    <h3 class="mb-0">Neural Correlates of Placebo Effects Project</h3><br>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="https://doi.org/10.5281/zenodo.4541048">Distinct brain networks involved in placebo analgesia between individuals with or without prior experience with opioids</a><br>
+                        C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, <i>Registered Report Stage 1 in-principle-acceptance</i>.</div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="https://doi.org/10.17605/OSF.IO/2VABK">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
+                        C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, <i>Registered Reports Stage 1 in-principle-acceptance</i>.</div>
+                        </div>
+                    </div>
+
+                    <br>
+                    <h3 class="mb-0">Neuropharmacology of Inhibitory Control Project</h3><br>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="https://www.sciencedirect.com/science/article/pii/S1053811920302986?via%3Dihub">Acute alcohol intoxication and expectations reshape the spatiotemporal functional architecture of executive control</a><br>
+                        F. Ribordy Lambert, C.A. Wicht, M. Mouthon, L. Spierer. 2020, Neuroimage.</div>
+                        </div>
+                    </div>
+
+                    <br>
+                    <h3 class="mb-0">GABAergic Neuromarkers of Pain Project</h3><br>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.594536/full">Beta Electroencephalographic Oscillation Is a Potential GABAergic Biomarker of Chronic Peripheral Neuropathic Pain</a><br>
+                        M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience.</div>
+                        </div>
+                    </div>
+
+                    <h3 class="mb-0">Automated EEG Data Processing Project</h3><br>
+
+                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
                         <div class="flex-grow-1">
                             <div><a href="http://neuromorph.epfl.ch" style="font-weight:bold;">Project Page</a></div>
@@ -280,172 +333,7 @@
                             A. Jorstad, J. Blanc, G.W. Knott.  Frontiers in Neuroanatomy, 2018.</div><br>
                             <div><a href="http://link.springer.com/article/10.1007%2Fs12021-014-9242-5">NeuroMorph: A Toolset for the Morphometric Analysis and Visualization of 3D Models Derived from Electron Microscopy Image Stacks</a><br>
                             A. Jorstad, B. Nigro, C. Cali, M. Wawrzyniak, P. Fua, G. Knott.  Neuroinformatics, 2015.</div>
-                    </div>
-                    </div>
-
-
-                    <br>
-                    <h3 class="mb-0">Science Policy Analysis</h3><br>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/grant_reviewer_matching_ssh_example.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="assets/files/Jorstad_Assigning_Grant_Applications_to_Reviewers_via_Text_Analysis.pdf">Assigning Grant Applications to Reviewers via Text Analysis</a><br>
-                        A. Jorstad.  SwissText, 2020.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/gender_bias_fig.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="https://bmjopen.bmj.com/content/10/8/e035058.abstract">Gender and other potential biases in peer review: cross-sectional analysis of 38 250 external peer review reports </a><br>
-                        A. Severin, J. Martins, R. Heyard, F. Delavy, A. Jorstad, M. Egger.  BMJ Open, 2020.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="https://www.authorea.com/users/158512/articles/200649-scientific-careers-in-switzerland-and-abroad">Scientific Careers in Switzerland and Abroad</a><br>
-                        A.C. LeBoeuf, A. Jorstad, E. Mulky.  Authorea, 2017.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/winnower_white.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="https://thewinnower.com/papers/4841-leveraging-doctoral-requirements-to-promote-reproducibility">Leveraging Doctoral Requirements to Promote Reproducibility</a> &nbsp;
-                        <a href="https://thewinnower.com/posts/contest-winners-how-the-improve-reproducibility">(Essay contest winner)</a><br>
-                        A. Jorstad.  The Winnower, 2016.</div>
-                        </div>
-                    </div>
-
-
-                    <br><br>
-                    <h3 class="mb-0">Biomedical Image Processing and Computer Vision</h3><br>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/PlosOne2018.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="https://doi.org/10.1371/journal.pone.0198131">The effects of aging on neuropil structure in mouse somatosensory cortex—A 3D electron microscopy analysis of layer 1</a><br>
-                        C. Cali, M. Wawrzyniak, C. Becker, B. Maco, M. Cantoni, A. Jorstad, B. Nigro, F. Grillo, V. De Paola, P. Fua, G.W. Knott.  PLoS ONE, 2018.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/elife2017.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="https://elifesciences.org/articles/29315">Computer assisted detection of axonal bouton structural plasticity in in vivo time-lapse images</a><br>
-                        R. Gala, D. Lebrecht, D.A. Sahlender, A. Jorstad, G. Knott, A. Holtmaat, A. Stepanyants.  eLife, 2017.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/JoN2015.jpg" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://www.jneurosci.org/content/35/24/9024">Delayed and Temporally Imprecise Neurotransmission in Reorganizing Cortical Microcircuits</a><br>
-                        S. Barnes, C. Cheetham, Y. Liu, S. Bennett, G. Albieri, A. Jorstad, G. Knott, G. Finnerty.  The Journal of Neuroscience, 2015.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/ICCV2015.jpg" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://www.cv-foundation.org/openaccess/content_iccv_2015/html/Ngo_Dense_Image_Registration_ICCV_2015_paper.html">Dense Image Registration and Deformable Surface Reconstruction in Presence of Occlusions and Minimal Texture</a><br>
-                        D.T. Ngo, S. Park, A. Jorstad, A. Crivellaro, C.D Yoo, P. Fua. IEEE International Conference on Computer Vision (ICCV), 2015.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Maco2015.jpg" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://www.ncbi.nlm.nih.gov/pubmed/25287849">Correlative In Vivo 2-Photon Beam Scanning Electron Microscopy: 3D Analysis of Neuronal Ultrastructure</a><br>
-                        B. Maco, A. Holtmaat, A. Jorstad, P. Fua, G. Knott.  Methods in Cell Biology, 2014.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/ECCV2014.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://infoscience.epfl.ch/record/201868/files/JorstadECCV2014.pdf">Refining Mitochondria Segmentation in EM Imagery with Active Surfaces</a><br>
-                        A. Jorstad, P. Fua.  European Conference on Computer Vision (ECCV), Workshop on Non-Rigid Shape Analysis and Deformable Image Alignment, 2014.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/ShapePerception2013.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://link.springer.com/chapter/10.1007%2F978-1-4471-5195-1_9">Deformations and Lighting</a><br>
-                        D. Jacobs, A. Jorstad, A. Trouv&eacute;.  Chapter, Shape Perception in Human and Computer Vision, 2013.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/ECCV2012.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://link.springer.com/chapter/10.1007%2F978-3-642-33765-9_6">A Fast Illumination and Deformation Insensitive Image Comparison Algorithm Using Wavelet-Based Geodesics</a><br>
-                        A. Jorstad, D. Jacobs, A. Trouv&eacute;.  European Conference on Computer Vision (ECCV), 2012.
-                        <br>
-                        <a href="assets/files/WaveletBasedGeodesicsCompare.zip"><b>Matlab implementation</b></a></div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Thesis2012.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="assets/files/Jorstad_Thesis_2012.pdf">Measuring Deformations and Illumination Changes in Images with Applications to Face Recognition</a><br>
-                        A. Jorstad.  Ph.D. Thesis, University of Maryland, College Park, 2012.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/CVPR2011.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=5995431">A Deformation and Lighting Insensitive Metric for Face Recognition Based on Dense Correspondences</a><br>
-                        A. Jorstad, D. Jacobs, A. Trouv&eacute;.  Computer Vision and Pattern Recognition (CVPR), 2011.
-                        <br>
-                        <a href="assets/files/Jorstad_WiML_poster.pdf">Women in Machine Learning Conference Poster, 2010</a></div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Mitral2010.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://link.springer.com/chapter/10.1007%2F978-3-642-13711-2_13">Patient-Specific Modeling and Analysis of the Mitral Valve Using 3D-TEE</a><br>
-                        P. Burlina, C. Sprouse, D. DeMenthon, A. Jorstad, R. Juang, F. Contijoch, T. Abraham, D. Yuh, E. McVeigh.  Information Processing in Computer-Assisted Interventions (IPCAI), 2010.
-                        <br>
-                        <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4762050">Individualized Cardiothoracic Surgical Planning using Computer Aided 3D Modeling and Image Analysis</a><br>
-                        P. Burlina, C. Sprouse, D. DeMenthon, A. Jorstad, F. Contijoch, E. McVeigh, R. Juang, T. Abraham, D. Yuh.  AMA/IEEE EMBS Medical Technology Conference, 2010.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/TIP2010.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=5440905">Distributed Consensus on Camera Pose</a><br>
-                        A. Jorstad, D. DeMenthon, I. Wang, P. Burlina.  IEEE Transactions on Image Processing, 2010.
-                        <br>
-                        <a href="http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=4762050">Model-Based Pose Estimation by Consensus</a><br>
-                        A. Jorstad, P. Burlina, I. Wang, D. Lucarelli, D. DeMenthon.  Intelligent Sensors, Sensor Networks and Information Processing (ISSNIP 2008), 2008.</div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Faces.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="assets/files/Jorstad_Prospectus.pdf">Robust Face Recognition Measuring 2D Deformations</a><br>
-                        A. Jorstad.  Ph.D. Candidacy Exam, Department of Applied Mathematics &amp; Statistics, and Scientific Computation, University of Maryland, College Park, 2009.
-                        <br>
-                        <a href="assets/files/Jorstad_Candidacy_Talk.pdf">Slides</a></div>
-                        </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Leaf2008.png" width="200"> </div>
-                        <div class="flex-grow-1">
-                        <div><a href="assets/files/Leaf_Classification_Poster.pdf">Leaf Classification from Local Boundary Analysis</a><br>
-                        A. Jorstad, D. Jacobs.  Poster, Graduate Research Interaction Day, University of Maryland, College Park, 2008.</div>
-                        </div>
+                    </div> -->
                     </div>
 
 
