Included adequate images and removed useless ones

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/gender_bias_fig.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/ESJ2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="">Predictors for returning to paid employment after transient ischemic attack and minor ischemic stroke </a><br>
                         C.A. Wicht, C.F. Chavan, J.-M. Annoni, P. Balmer, J. Aellen, A.M. Humm, F. Crettaz von Roten, L. Spierer, F. Medlin.  European Stroke Journal, <i>submitted</i>.</div>
@@ -283,7 +283,7 @@
                     <h3 class="mb-0">Neural Correlates of Placebo Effects Project</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://doi.org/10.5281/zenodo.4541048">Distinct brain networks involved in placebo analgesia between individuals with or without prior experience with opioids</a><br>
                         C.A. Wicht, M. Mouthon, J. Nsimire Chabwine, J. Gaab, L. Spierer. 2021, European Journal of Neuroscience, <i>Registered Report Stage 1 in-principle-acceptance</i>.</div>
@@ -291,7 +291,7 @@
                     </div>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/Cortex2019.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://doi.org/10.17605/OSF.IO/2VABK">Neural correlates of expectations induced effects of caffeine intake on executive functions</a><br>
                         C.A. Wicht, M. De Pretto, M. Mouthon, L. Spierer. 2019, Cortex, <i>Registered Reports Stage 1 in-principle-acceptance</i>.</div>
@@ -302,7 +302,7 @@
                     <h3 class="mb-0">Neuropharmacology of Inhibitory Control Project</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroImage2020.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://www.sciencedirect.com/science/article/pii/S1053811920302986?via%3Dihub">Acute alcohol intoxication and expectations reshape the spatiotemporal functional architecture of executive control</a><br>
                         F. Ribordy Lambert, C.A. Wicht, M. Mouthon, L. Spierer. 2020, Neuroimage.</div>
@@ -313,10 +313,18 @@
                     <h3 class="mb-0">GABAergic Neuromarkers of Pain Project</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/We_scientists_def.png" width="200"> </div>
+                        <div class="flex-shrink-0-im pr-5"><img src="assets/img/FrontNeurosci2021.png" width="200"> </div>
                         <div class="flex-grow-1">
                         <div><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.594536/full">Beta Electroencephalographic Oscillation Is a Potential GABAergic Biomarker of Chronic Peripheral Neuropathic Pain</a><br>
                         M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience.</div>
+                        </div>
+                    </div>
+
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-shrink-0-im pr-5"> </div>
+                        <div class="flex-grow-1">
+                        <div><a href="https://www.jns-journal.com/article/S0022-510X(19)30857-3/fulltext">Patients with fibromyalgia display two different clinical profiles based on their GABAergic EEG markers: Preliminary results</a><br>
+                        C. Mancini, C.A. Wicht, M. Mouthon, S. Goetz, J. Nsimire Chabwine. 2019, Journal of the Neurological Sciences.</div>
                         </div>
                     </div>
 
