Minor graphical improvements

--- a/index.html
+++ b/index.html
@@ -265,10 +265,10 @@
             <!-- Research -->
             <section class="resume-section" id="research">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Research</h2>
+                    <h2 class="mb-5">Research Projects</h2>
 
                     <br>
-                    <h3 class="mb-0">Stroke Rehabilitation Project</h3><br>
+                    <h3 class="mb-0">Stroke Rehabilitation</h3><br>
 
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -280,7 +280,7 @@
                     </div>
 
                     <br>
-                    <h3 class="mb-0">Neural Correlates of Placebo Effects Project</h3><br>
+                    <h3 class="mb-0">Neural Correlates of Placebo Effects</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/EJN2021.png" width="200"> </div>
@@ -299,7 +299,7 @@
                     </div>
 
                     <br>
-                    <h3 class="mb-0">Neuropharmacology of Inhibitory Control Project</h3><br>
+                    <h3 class="mb-0">Neuropharmacology of Inhibitory Control</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroImage2020.png" width="200"> </div>
@@ -310,7 +310,7 @@
                     </div>
 
                     <br>
-                    <h3 class="mb-0">GABAergic Neuromarkers of Pain Project</h3><br>
+                    <h3 class="mb-0">GABAergic Neuromarkers of Pain</h3><br>
 
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/FrontNeurosci2021.png" width="200"> </div>
@@ -318,17 +318,12 @@
                         <div><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.594536/full">Beta Electroencephalographic Oscillation Is a Potential GABAergic Biomarker of Chronic Peripheral Neuropathic Pain</a><br>
                         M. Texeira, C. Mancini, C.A. Wicht, G. Maestretti, T. Kuntzer, D. Cazzoli, M. Mouthon, J.-M. Annoni, J. Nsimire Chabwine. 2021, Frontiers in Neuroscience.</div>
                         </div>
-                    </div>
-
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-shrink-0-im pr-5"> </div>
-                        <div class="flex-grow-1">
                         <div><a href="https://www.jns-journal.com/article/S0022-510X(19)30857-3/fulltext">Patients with fibromyalgia display two different clinical profiles based on their GABAergic EEG markers: Preliminary results</a><br>
                         C. Mancini, C.A. Wicht, M. Mouthon, S. Goetz, J. Nsimire Chabwine. 2019, Journal of the Neurological Sciences.</div>
                         </div>
                     </div>
 
-                    <h3 class="mb-0">Automated EEG Data Processing Project</h3><br>
+                    <h3 class="mb-0">Automated EEG Data Processing</h3><br>
 
                     <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
