--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                             <div><a href="http://link.springer.com/article/10.1007%2Fs12021-014-9242-5">NeuroMorph: A Toolset for the Morphometric Analysis and Visualization of 3D Models Derived from Electron Microscopy Image Stacks</a><br>
                             A. Jorstad, B. Nigro, C. Cali, M. Wawrzyniak, P. Fua, G. Knott.  Neuroinformatics, 2015.</div>
                     </div> -->
-                    </div>
+                    <!-- </div> -->
 
 
                 </div>
