--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
                     </div>
 
 
-                    <br>
-                    <h3 class="mb-0">Automated EEG Data Processing</h3><br>
+                    <!-- <br>
+                    <h3 class="mb-0">Automated EEG Data Processing</h3><br> -->
 
                     <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
