--- a/index.html
+++ b/index.html
@@ -247,19 +247,59 @@
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Fribourg, CH</h3>
-                            <div class="subheading mb-3">Ph.D. in Neuroscience</div>
-                            <div><a href="https://www.unifr.ch/med/spierer/en/">Laboratory for Neurorehabilitation Science</a></div>
-                            <p>Supervisor: <a href="https://www.unifr.ch/med/fr/section/departments/nms/people/11048/b2de9">PD Dr Lucas Spierer</a> <br>
-                            Co-supervisor: <a href="https://psychologie.unibas.ch/de/personen/jens-gaab/curriculum-vitae/">Prof Jens Gaab</a> </p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2018-Present</span></div>
-                    </div>
+                    <div class="resume-section-content">
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">MATLAB</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+
 
                 </div>
             </section>
+
+        <!-- <div class="col-lg-3">
+          <section class="resume-section skills-section mb-5">
+            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
+            <div class="resume-section-content">
+                <div class="resume-skill-item">
+                  <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+                  <ul class="list-unstyled mb-4">
+                    <li class="mb-2">
+                        <div class="resume-skill-name">Angular</div>
+                      <div class="progress resume-progress">
+                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </li>
+                    <li class="mb-2">
+                        <div class="resume-skill-name">React</div>
+                      <div class="progress resume-progress">
+                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 94%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </li>
+                    <li class="mb-2">
+                        <div class="resume-skill-name">JavaScript</div>
+                      <div class="progress resume-progress">
+                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </li>
+
+                    <li class="mb-2">
+                        <div class="resume-skill-name">Node.js</div>
+                      <div class="progress resume-progress">
+                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </li>
+                    <li class="mb-2">
+                        <div class="resume-skill-name">HTML/CSS/SASS/LESS</div>
+                      <div class="progress resume-progress">
+                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </li>
+                  </ul>
+                </div> -->
             <hr class="m-0" />
 
             <!-- Research -->
