--- a/index.html
+++ b/index.html
@@ -248,14 +248,84 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="resume-section-content">
+
+                      <!-- Programming & Softwares -->
+                      <div class="subheading mb-3">Programming languages & Softwares</div>
                         <div class="resume-skill-item">
                           <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">MATLAB</div>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                          </div>
+                        </div>
 
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">R</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">SPSS</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">Word/Excel/Powerpoint</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">Git</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">Python</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">HTML/CSS</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">LimeSurvey</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">REDCap</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <!-- Languages -->
+                        <div class="subheading mb-3">Languages</div>
+                        <p>· French: C2 <br>· English: C1 <br>· Italian: B1 <br>· German: A2</p><br>
 
                 </div>
             </section>
@@ -398,15 +468,13 @@
 
                             <div class="subheading mb-3">Music</div>
                             <p>guitar (since age of 10) · live concerts programming </p><br>
-                              <div class="subheading mb-4">Hubris</div>
-                              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                                  <div class="flex-shrink-0-im pr-5">
-                                    <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </div></a>
-                                    <br>
-                              </div>
-
-                            <div class="subheading mb-3">Languages</div>
-                            <p>· French: C2 <br>· English: C1 <br>· Italian: B1 <br>· German: A2</p><br>
+                              <div class="subheading mb-4">Recorded albums</div>
+                                <div class="subheading mb-5">Hubris</div>
+                                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                    <div class="flex-shrink-0-im pr-5">
+                                      <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </div></a>
+                                      <br>
+                                </div>
                         </div>
                     </div>
                 </div>
