Adjusted interests section

--- a/index.html
+++ b/index.html
@@ -474,7 +474,18 @@
                                     <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </div></a>
                                       <br>
+                                      <a href="https://hubrisband.bandcamp.com/album/emersion-full-album"><img src=https://f4.bcbits.com/img/a2917254585_16.jpg width="200"> </div></a>
+                                      <br>
                                 </div>
+                                
+                                <br><br>
+                                <div class="subheading mb-5">No Way To Escape</div>
+                                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                                    <div class="flex-shrink-0-im pr-5">
+                                      <a href="https://nowaytoescape.bandcamp.com/album/no-way-to-escape-ep"><img src=https://f4.bcbits.com/img/a1458377276_16.jpg width="200"> </div></a>
+                                      <br>
+                                </div>
+
                         </div>
                     </div>
                 </div>
