--- a/index.html
+++ b/index.html
@@ -325,51 +325,40 @@
 
                         <!-- Languages -->
                         <div class="subheading mb-3">Languages</div>
-                        <p>· French: C2 <br>· English: C1 <br>· Italian: B1 <br>· German: A2</p><br>
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">French [C2]</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
 
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">English [C1]</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">Italian [A2-B1]</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <div class="resume-skill-item">
+                          <ul class="list-unstyled mb-4">
+                            <li class="mb-2">
+                                <div class="resume-skill-name">German [A2]</div>
+                              <div class="progress resume-progress">
+                              <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
                 </div>
             </section>
 
-        <!-- <div class="col-lg-3">
-          <section class="resume-section skills-section mb-5">
-            <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
-            <div class="resume-section-content">
-                <div class="resume-skill-item">
-                  <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-                  <ul class="list-unstyled mb-4">
-                    <li class="mb-2">
-                        <div class="resume-skill-name">Angular</div>
-                      <div class="progress resume-progress">
-                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </li>
-                    <li class="mb-2">
-                        <div class="resume-skill-name">React</div>
-                      <div class="progress resume-progress">
-                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 94%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </li>
-                    <li class="mb-2">
-                        <div class="resume-skill-name">JavaScript</div>
-                      <div class="progress resume-progress">
-                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </li>
-
-                    <li class="mb-2">
-                        <div class="resume-skill-name">Node.js</div>
-                      <div class="progress resume-progress">
-                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 92%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </li>
-                    <li class="mb-2">
-                        <div class="resume-skill-name">HTML/CSS/SASS/LESS</div>
-                      <div class="progress resume-progress">
-                      <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 96%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
-                    </li>
-                  </ul>
-                </div> -->
             <hr class="m-0" />
 
             <!-- Research -->
@@ -477,7 +466,7 @@
                                       <a href="https://hubrisband.bandcamp.com/album/emersion-full-album"><img src=https://f4.bcbits.com/img/a2917254585_16.jpg width="200"> </div></a>
                                       <br>
                                 </div>
-                                
+
                                 <br><br>
                                 <div class="subheading mb-5">No Way To Escape</div>
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
