--- a/index.html
+++ b/index.html
@@ -426,20 +426,14 @@
 
                     <h3 class="mb-0">Automated EEG Data Processing</h3><br>
 
-                    <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
                         <div class="flex-grow-1">
                             <div><a href="http://neuromorph.epfl.ch" style="font-weight:bold;">Project Page</a></div>
                             <br>
                             <div><a href="https://github.com/NeuroMorph-EPFL/NeuroMorph" style="font-weight:bold;">Code and Documentation on GitHub</a></div>
-                            <br>
-                            <div><a href="https://www.frontiersin.org/articles/10.3389/fnana.2018.00059">NeuroMorph: A Software Toolset for 3D Analysis of Neurite Morphology and Connectivity</a><br>
-                            A. Jorstad, J. Blanc, G.W. Knott.  Frontiers in Neuroanatomy, 2018.</div><br>
-                            <div><a href="http://link.springer.com/article/10.1007%2Fs12021-014-9242-5">NeuroMorph: A Toolset for the Morphometric Analysis and Visualization of 3D Models Derived from Electron Microscopy Image Stacks</a><br>
-                            A. Jorstad, B. Nigro, C. Cali, M. Wawrzyniak, P. Fua, G. Knott.  Neuroinformatics, 2015.</div>
+                        </div> -->
                     </div> -->
-                    <!-- </div> -->
-
 
                 </div>
             </section>
