--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
                     <br>
                     <h3 class="mb-0">Automated EEG Data Processing</h3><br>
-                    
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-shrink-0-im pr-5"><img src="assets/img/NeuroMorph_screenshot.png" width="200"> </div>
                         <div class="flex-grow-1">
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                   </div>
-                </div>
+                <!-- </div> -->
             </section>
             <hr class="m-0" />
 
@@ -454,6 +454,8 @@
                                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                     <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/apocryphal-gravity"><img src=https://f4.bcbits.com/img/a2851901234_10.jpg width="200"> </div></a>
+                                      <br>
+                                    <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/emersion-full-album"><img src=https://f4.bcbits.com/img/a2917254585_16.jpg width="200"> </div></a>
 
                                     <br>
