--- a/index.html
+++ b/index.html
@@ -457,8 +457,8 @@
                                       <br>
                                     <div class="flex-shrink-0-im pr-5">
                                       <a href="https://hubrisband.bandcamp.com/album/emersion-full-album"><img src=https://f4.bcbits.com/img/a2917254585_16.jpg width="200"> </div></a>
-
-                                    <br><br>
+                                </div>
+                                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                     <div class="subheading mb-5">No Way To Escape</div>
                                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                                         <div class="flex-shrink-0-im pr-5">
