--- a/index.html
+++ b/index.html
@@ -255,10 +255,10 @@
                           <ul class="list-unstyled mb-4">
                             <li class="mb-2">
                                 <div class="resume-skill-name">MATLAB</div>
+                                <span class="iconify" data-icon="file-icons:matlab"></span>
                               <div class="progress resume-progress">
                               <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: 98%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
-                    </div>
 
                         <div class="resume-skill-item">
                           <ul class="list-unstyled mb-4">
